# furiousapi-core

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
furiousapi/core/: config.py  exceptions.py  fields.py  pagination.py  responses.py  types.py
furiousapi/core/api/: error_details.py  exceptions.py
furiousapi/core/api/controllers/: __init__.py  base.py  mixins.py  utils.py
furiousapi/core/db/: consts.py  exceptions.py  fields.py  metaclasses.py  models.py  pagination.py  repository.py  utils.py
furiousapi/utils/: __init__.py
tests/: utils.py
tests/core/: test_controllers.py
tests/db/: test_utils.py
